// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Drawer[Base] should render correctly about base 1`] = `
<div
  class="c-6cljz3 c-rmoeu5 c-ehlr5u c-6gnw09 c-8u2kum c-1f0vjq"
>
  <div
    class="cf4334u"
  >
    <div
      class="c-snheni"
      style="width: 400px;"
    >
      <div
        class="cvg2z0f"
      >
        <div
          class="c-s33w2v"
        >
          Drawer Title
        </div>
        <div
          class="c-scekqv"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M4.6129 3.2097L4.70711 3.29289L12 10.585L19.2929 3.29289C19.6834 2.90237 20.3166 2.90237 20.7071 3.29289C21.0676 3.65338 21.0953 4.22061 20.7903 4.6129L20.7071 4.70711L13.415 12L20.7071 19.2929C21.0976 19.6834 21.0976 20.3166 20.7071 20.7071C20.3466 21.0676 19.7794 21.0953 19.3871 20.7903L19.2929 20.7071L12 13.415L4.70711 20.7071C4.31658 21.0976 3.68342 21.0976 3.29289 20.7071C2.93241 20.3466 2.90468 19.7794 3.2097 19.3871L3.29289 19.2929L10.585 12L3.29289 4.70711C2.90237 4.31658 2.90237 3.68342 3.29289 3.29289C3.65338 2.93241 4.22061 2.90468 4.6129 3.2097Z"
            />
          </svg>
        </div>
      </div>
      <div
        class="cf3wcb8"
      >
        you are visited 1
      </div>
      <div
        class="cunqxu5"
      >
        <button
          class="c-rg592x cvey2f3 cs6jo0l"
          type="button"
        >
          <span
            class="cboe6wq"
          >
            Cancel
          </span>
        </button>
        <button
          class="c-trc8a3 cvey2f3"
          type="button"
        >
          <span
            class="cboe6wq"
          >
            Ok
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer[Base] should render correctly about close 1`] = `
<div
  class="c-6cljz3 c-rmoeu5 c-ehlr5u c-6gnw09 c-8u2kum c-1f0vjq"
>
  <div
    class="cf4334u"
  >
    <div
      class="c-snheni"
      style="width: 400px;"
    >
      <div
        class="cvg2z0f"
      >
        <div
          class="c-s33w2v"
        >
          Modal Title
        </div>
      </div>
      <div
        class="cf3wcb8"
      >
        The prop maskCloseAble is  
        false
        .
        <br />
        You must click the button to close the Modal.
      </div>
      <div
        class="cunqxu5"
      >
        <button
          class="c-rg592x cvey2f3 cs6jo0l"
          type="button"
        >
          <span
            class="cboe6wq"
          >
            Close
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer[Base] should render correctly about container 1`] = `
<div
  class="c-6cljz3 c-rmoeu5 c-ehlr5u c-6gnw09 c-8u2kum c-1f0vjq"
>
  <div
    class="cf4334u"
  >
    <div
      class="c-snheni"
      style="width: 400px;"
    >
      <div
        class="cvg2z0f"
      >
        <div
          class="c-s33w2v"
        >
          Drawer Title
        </div>
        <div
          class="c-scekqv"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M4.6129 3.2097L4.70711 3.29289L12 10.585L19.2929 3.29289C19.6834 2.90237 20.3166 2.90237 20.7071 3.29289C21.0676 3.65338 21.0953 4.22061 20.7903 4.6129L20.7071 4.70711L13.415 12L20.7071 19.2929C21.0976 19.6834 21.0976 20.3166 20.7071 20.7071C20.3466 21.0676 19.7794 21.0953 19.3871 20.7903L19.2929 20.7071L12 13.415L4.70711 20.7071C4.31658 21.0976 3.68342 21.0976 3.29289 20.7071C2.93241 20.3466 2.90468 19.7794 3.2097 19.3871L3.29289 19.2929L10.585 12L3.29289 4.70711C2.90237 4.31658 2.90237 3.68342 3.29289 3.29289C3.65338 2.93241 4.22061 2.90468 4.6129 3.2097Z"
            />
          </svg>
        </div>
      </div>
      <div
        class="cf3wcb8"
      >
        Drawer mount after Button
      </div>
      <div
        class="cunqxu5"
      >
        <button
          class="c-rg592x cvey2f3 cs6jo0l"
          type="button"
        >
          <span
            class="cboe6wq"
          >
            Cancel
          </span>
        </button>
        <button
          class="c-trc8a3 cvey2f3"
          type="button"
        >
          <span
            class="cboe6wq"
          >
            Ok
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer[Base] should render correctly about form 1`] = `
<div
  class="c-6cljz3 c-rmoeu5 c-ehlr5u c-6gnw09 c-8u2kum c-1f0vjq"
>
  <div
    class="cf4334u"
  >
    <div
      class="c-snheni"
      style="width: 456px;"
    >
      <div
        class="cvg2z0f"
      >
        <div
          class="c-s33w2v"
        >
          Form
        </div>
        <div
          class="c-scekqv"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M4.6129 3.2097L4.70711 3.29289L12 10.585L19.2929 3.29289C19.6834 2.90237 20.3166 2.90237 20.7071 3.29289C21.0676 3.65338 21.0953 4.22061 20.7903 4.6129L20.7071 4.70711L13.415 12L20.7071 19.2929C21.0976 19.6834 21.0976 20.3166 20.7071 20.7071C20.3466 21.0676 19.7794 21.0953 19.3871 20.7903L19.2929 20.7071L12 13.415L4.70711 20.7071C4.31658 21.0976 3.68342 21.0976 3.29289 20.7071C2.93241 20.3466 2.90468 19.7794 3.2097 19.3871L3.29289 19.2929L10.585 12L3.29289 4.70711C2.90237 4.31658 2.90237 3.68342 3.29289 3.29289C3.65338 2.93241 4.22061 2.90468 4.6129 3.2097Z"
            />
          </svg>
        </div>
      </div>
      <div
        class="cf3wcb8"
      >
        <form
          class="cr9qis4"
          style="max-width: 400px;"
        >
          <div
            class="csrte0i c-48r573"
            data-soui-status="default"
          >
            <div
              class="c-v46lkd"
              style="width: 100px;"
            >
              Email
            </div>
            <div
              class="ci4ezng"
              data-soui-role="form-control"
            >
              <div
                class="c5g1ick"
                data-soui-type="input"
              >
                <div
                  class="cgc7yq7 c-dwl4jz cdip7we c-57d5o6"
                >
                  <input
                    class="cccsm1n"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="csrte0i c-48r573"
            data-soui-status="default"
          >
            <div
              class="c-v46lkd"
              style="width: 100px;"
            >
              Password
            </div>
            <div
              class="ci4ezng"
              data-soui-role="form-control"
            >
              <div
                class="c5g1ick"
                data-soui-type="input"
              >
                <div
                  class="cgc7yq7 c-dwl4jz cdip7we c-57d5o6"
                >
                  <input
                    class="cccsm1n"
                    type="password"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
      <div
        class="cunqxu5"
      >
        <div>
          <button
            class="c-rg592x cvey2f3 cs6jo0l"
            type="button"
          >
            <span
              class="cboe6wq"
            >
              Cancel
            </span>
          </button>
          <button
            class="c-trc8a3 cvey2f3"
            type="button"
          >
            <span
              class="cboe6wq"
            >
              Submit
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer[Base] should render correctly about full screen 1`] = `
<div
  class="c-6cljz3 c-rmoeu5 c-ehlr5u c-6gnw09 c-mokj38 c-8u2kum c-1f0vjq"
>
  <div
    class="cf4334u"
  >
    <div
      class="c-snheni"
    >
      <div
        class="cvg2z0f"
      >
        <div
          class="c-s33w2v"
        >
          Profile
        </div>
        <div
          class="c-scekqv"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M4.6129 3.2097L4.70711 3.29289L12 10.585L19.2929 3.29289C19.6834 2.90237 20.3166 2.90237 20.7071 3.29289C21.0676 3.65338 21.0953 4.22061 20.7903 4.6129L20.7071 4.70711L13.415 12L20.7071 19.2929C21.0976 19.6834 21.0976 20.3166 20.7071 20.7071C20.3466 21.0676 19.7794 21.0953 19.3871 20.7903L19.2929 20.7071L12 13.415L4.70711 20.7071C4.31658 21.0976 3.68342 21.0976 3.29289 20.7071C2.93241 20.3466 2.90468 19.7794 3.2097 19.3871L3.29289 19.2929L10.585 12L3.29289 4.70711C2.90237 4.31658 2.90237 3.68342 3.29289 3.29289C3.65338 2.93241 4.22061 2.90468 4.6129 3.2097Z"
            />
          </svg>
        </div>
      </div>
      <div
        class="cf3wcb8"
      >
        <div>
          <form
            class="cr9qis4"
          >
            <div
              class="csrte0i"
              data-soui-status="default"
            >
              <div
                class="c-v46lkd"
              >
                Name
              </div>
              <div
                class="ci4ezng"
                data-soui-role="form-control"
              >
                <div
                  class="c5g1ick"
                  data-soui-type="input"
                >
                  <div
                    class="cgc7yq7 c-dwl4jz cdip7we c-57d5o6"
                  >
                    <input
                      class="cccsm1n"
                      placeholder="please input name"
                      value="zhangsan"
                    />
                    <div
                      class="c-9f965n"
                    >
                      <span
                        class="cc9gbvi"
                      >
                        <svg
                          aria-hidden="true"
                          fill="currentColor"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M12 23C5.924 23 1 18.076 1 12C1 5.924 5.924 1 12 1C18.076 1 23 5.924 23 12C23 18.076 18.076 23 12 23Z"
                            fill="currentColor"
                          />
                          <path
                            d="M9.6129 8.2097C9.22061 7.90468 8.65338 7.93241 8.29289 8.29289C7.90237 8.68342 7.90237 9.31658 8.29289 9.70711L10.413 11.828L8.29289 13.9497L8.2097 14.044C7.90468 14.4362 7.93241 15.0035 8.29289 15.364C8.68342 15.7545 9.31658 15.7545 9.70711 15.364L11.828 13.242L13.9497 15.364L14.044 15.4471C14.4362 15.7522 15.0035 15.7244 15.364 15.364C15.7545 14.9734 15.7545 14.3403 15.364 13.9497L13.242 11.828L15.364 9.70711L15.4471 9.6129C15.7522 9.22061 15.7244 8.65338 15.364 8.29289C14.9734 7.90237 14.3403 7.90237 13.9497 8.29289L11.828 10.413L9.70711 8.29289L9.6129 8.2097Z"
                            fill="white"
                          />
                        </svg>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="csrte0i"
              data-soui-status="default"
            >
              <div
                class="c-v46lkd"
              >
                Password
              </div>
              <div
                class="ci4ezng"
                data-soui-role="form-control"
              >
                <div
                  class="c5g1ick"
                  data-soui-type="input"
                >
                  <div
                    class="cgc7yq7 c-dwl4jz cdip7we c-57d5o6"
                  >
                    <input
                      class="cccsm1n"
                      placeholder="please input password"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="csrte0i"
              data-soui-status="default"
            >
              <div
                class="c-v46lkd"
              >
                Email
              </div>
              <div
                class="ci4ezng"
                data-soui-role="form-control"
              >
                <div
                  class="c5g1ick"
                  data-soui-type="input"
                >
                  <div
                    class="cgc7yq7 c-dwl4jz cdip7we c-57d5o6"
                  >
                    <input
                      class="cccsm1n"
                      placeholder="please input email"
                      value="zhangsan@qq.com"
                    />
                    <div
                      class="c-9f965n"
                    >
                      <span
                        class="cc9gbvi"
                      >
                        <svg
                          aria-hidden="true"
                          fill="currentColor"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M12 23C5.924 23 1 18.076 1 12C1 5.924 5.924 1 12 1C18.076 1 23 5.924 23 12C23 18.076 18.076 23 12 23Z"
                            fill="currentColor"
                          />
                          <path
                            d="M9.6129 8.2097C9.22061 7.90468 8.65338 7.93241 8.29289 8.29289C7.90237 8.68342 7.90237 9.31658 8.29289 9.70711L10.413 11.828L8.29289 13.9497L8.2097 14.044C7.90468 14.4362 7.93241 15.0035 8.29289 15.364C8.68342 15.7545 9.31658 15.7545 9.70711 15.364L11.828 13.242L13.9497 15.364L14.044 15.4471C14.4362 15.7522 15.0035 15.7244 15.364 15.364C15.7545 14.9734 15.7545 14.3403 15.364 13.9497L13.242 11.828L15.364 9.70711L15.4471 9.6129C15.7522 9.22061 15.7244 8.65338 15.364 8.29289C14.9734 7.90237 14.3403 7.90237 13.9497 8.29289L11.828 10.413L9.70711 8.29289L9.6129 8.2097Z"
                            fill="white"
                          />
                        </svg>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="csrte0i"
              data-soui-status="default"
            >
              <div
                class="c-v46lkd"
              >
                Gendar
              </div>
              <div
                class="ci4ezng"
                data-soui-role="form-control"
              >
                <div
                  class="cw6sirj"
                >
                  <div
                    class="c-emivhp"
                  >
                    <input
                      style="display: none;"
                      tabindex="0"
                      type="radio"
                    />
                    <span
                      class="c-yzux30"
                    >
                      <span
                        class="c-2ldwtt"
                        tabindex="1"
                      />
                    </span>
                    <span
                      class="c-qgj373"
                    >
                      male
                    </span>
                  </div>
                  <div
                    class="c-emivhp"
                  >
                    <input
                      style="display: none;"
                      tabindex="0"
                      type="radio"
                    />
                    <span
                      class="c-yzux30"
                    >
                      <span
                        class="c-2ldwtt"
                        tabindex="1"
                      />
                    </span>
                    <span
                      class="c-qgj373"
                    >
                      female
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="csrte0i"
              data-soui-status="default"
            >
              <div
                class="c-v46lkd"
              >
                Course
              </div>
              <div
                class="ci4ezng"
                data-soui-role="form-control"
              >
                <div
                  class="c-vt37hb"
                >
                  <div
                    class="c-2oyyob"
                  >
                    <input
                      style="display: none;"
                      tabindex="0"
                      type="checkbox"
                    />
                    <span
                      class="c-do3bmm"
                    >
                      <i
                        class="cs409o1"
                        data-soui-role="checkbox-indicator"
                        tabindex="1"
                      />
                    </span>
                    <span
                      class="c19hl67"
                    >
                      chinese
                    </span>
                  </div>
                  <div
                    class="c-2oyyob"
                  >
                    <input
                      style="display: none;"
                      tabindex="0"
                      type="checkbox"
                    />
                    <span
                      class="c-do3bmm"
                    >
                      <i
                        class="cs409o1"
                        data-soui-role="checkbox-indicator"
                        tabindex="1"
                      />
                    </span>
                    <span
                      class="c19hl67"
                    >
                      maths
                    </span>
                  </div>
                  <div
                    class="c-2oyyob"
                  >
                    <input
                      style="display: none;"
                      tabindex="0"
                      type="checkbox"
                    />
                    <span
                      class="c-do3bmm"
                    >
                      <i
                        class="cs409o1"
                        data-soui-role="checkbox-indicator"
                        tabindex="1"
                      />
                    </span>
                    <span
                      class="c19hl67"
                    >
                      english
                    </span>
                  </div>
                  <div
                    class="c-2oyyob"
                  >
                    <input
                      style="display: none;"
                      tabindex="0"
                      type="checkbox"
                    />
                    <span
                      class="c-do3bmm"
                    >
                      <i
                        class="cs409o1"
                        data-soui-role="checkbox-indicator"
                        tabindex="1"
                      />
                    </span>
                    <span
                      class="c19hl67"
                    >
                      physics
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="csrte0i"
              data-soui-status="default"
            >
              <div
                class="c-v46lkd"
              >
                Enrollment date
              </div>
              <div
                class="ci4ezng"
                data-soui-role="form-control"
              >
                <div
                  class="c-kb0fus"
                  data-soui-type="date"
                >
                  <div
                    class="c-dt8k4h ci4jqom csb873r c9qf70p"
                    tabindex="1"
                  >
                    <div
                      class="clzqaj8"
                    >
                      <div
                        class="cw835ma"
                      >
                        <div
                          class="c-wskee7"
                        >
                          <div
                            class="c-7hwrps"
                          >
                            <span
                              class="c-37qmec"
                            >
                              please select date
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="czhvzzk"
                    >
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M17 1C17.5523 1 18 1.44772 18 2V3H21C22.1046 3 23 3.89543 23 5V20C23 21.1046 22.1046 22 21 22H3C1.89543 22 1 21.1046 1 20V5C1 3.89543 1.89543 3 3 3H6V2C6 1.44772 6.44772 1 7 1C7.55228 1 8 1.44772 8 2V3H16V2C16 1.44772 16.4477 1 17 1ZM21 10H3V20H21V10ZM7 16C7.82843 16 8.5 16.6716 8.5 17.5C8.5 18.3284 7.82843 19 7 19C6.17157 19 5.5 18.3284 5.5 17.5C5.5 16.6716 6.17157 16 7 16ZM12 16C12.8284 16 13.5 16.6716 13.5 17.5C13.5 18.3284 12.8284 19 12 19C11.1716 19 10.5 18.3284 10.5 17.5C10.5 16.6716 11.1716 16 12 16ZM17 16C17.8284 16 18.5 16.6716 18.5 17.5C18.5 18.3284 17.8284 19 17 19C16.1716 19 15.5 18.3284 15.5 17.5C15.5 16.6716 16.1716 16 17 16ZM7 11C7.82843 11 8.5 11.6716 8.5 12.5C8.5 13.3284 7.82843 14 7 14C6.17157 14 5.5 13.3284 5.5 12.5C5.5 11.6716 6.17157 11 7 11ZM12 11C12.8284 11 13.5 11.6716 13.5 12.5C13.5 13.3284 12.8284 14 12 14C11.1716 14 10.5 13.3284 10.5 12.5C10.5 11.6716 11.1716 11 12 11ZM17 11C17.8284 11 18.5 11.6716 18.5 12.5C18.5 13.3284 17.8284 14 17 14C16.1716 14 15.5 13.3284 15.5 12.5C15.5 11.6716 16.1716 11 17 11ZM6 5H3V8H21V5H18C18 5.55228 17.5523 6 17 6C16.4477 6 16 5.55228 16 5H8C8 5.55228 7.55228 6 7 6C6.44772 6 6 5.55228 6 5Z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    class="coqsbym"
                    data-sheinx-animation-duration="fast"
                    data-sheinx-animation-type="fade"
                    style="pointer-events: none; position: absolute; z-index: -1000; display: none;"
                  >
                    <div
                      class="c-3sw5h6"
                    >
                      <div
                        class="c8b8vn7 cl3jsqt"
                      >
                        <div
                          class="ce4ai42"
                        >
                          <div
                            class="czc6jq1"
                          >
                            <span
                              class="czc4lhn"
                            >
                              <svg
                                aria-hidden="true"
                                fill="currentColor"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M11.3871 5.2097C11.7794 4.90468 12.3466 4.93241 12.7071 5.29289L12.7903 5.3871C13.0953 5.77939 13.0676 6.34662 12.7071 6.70711L8.12205 11.2928C7.7317 11.6835 7.7317 12.3165 8.12205 12.7072L12.7071 17.2929L12.7903 17.3871C13.0953 17.7794 13.0676 18.3466 12.7071 18.7071C12.3166 19.0976 11.6834 19.0976 11.2929 18.7071L5.29289 12.7071L5.2097 12.6129C4.90468 12.2206 4.93241 11.6534 5.29289 11.2929L11.2929 5.29289L11.3871 5.2097ZM17.3871 5.2097C17.7794 4.90468 18.3466 4.93241 18.7071 5.29289L18.7903 5.3871C19.0953 5.77939 19.0676 6.34662 18.7071 6.70711L14.1221 11.2928C13.7317 11.6835 13.7317 12.3165 14.1221 12.7072L18.7071 17.2929L18.7903 17.3871C19.0953 17.7794 19.0676 18.3466 18.7071 18.7071C18.3166 19.0976 17.6834 19.0976 17.2929 18.7071L11.2929 12.7071L11.2097 12.6129C10.9047 12.2206 10.9324 11.6534 11.2929 11.2929L17.2929 5.29289L17.3871 5.2097Z"
                                />
                              </svg>
                            </span>
                            <span
                              class="czc4lhn"
                            >
                              <svg
                                aria-hidden="true"
                                fill="currentColor"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
                                />
                              </svg>
                            </span>
                          </div>
                          <div
                            class="c-jhck0a"
                          >
                            <span
                              class="czc4tfk"
                            >
                              2024
                            </span>
                            <i>
                              -
                            </i>
                            <span
                              class="czc4tfk"
                            >
                              3
                            </span>
                          </div>
                          <div
                            class="cu4bhu2"
                          >
                            <span
                              class="czc4lhn"
                            >
                              <svg
                                aria-hidden="true"
                                fill="currentColor"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
                                />
                              </svg>
                            </span>
                            <span
                              class="czc4lhn"
                            >
                              <svg
                                aria-hidden="true"
                                fill="currentColor"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M11.2929 5.29289C11.6834 4.90237 12.3166 4.90237 12.7071 5.29289L18.7071 11.2929L18.7903 11.3871C19.0953 11.7794 19.0676 12.3466 18.7071 12.7071L12.7071 18.7071L12.6129 18.7903C12.2206 19.0953 11.6534 19.0676 11.2929 18.7071L11.2097 18.6129C10.9047 18.2206 10.9324 17.6534 11.2929 17.2929L15.8779 12.7072C16.2683 12.3165 16.2683 11.6835 15.8779 11.2928L11.2929 6.70711L11.2097 6.6129C10.9047 6.22061 10.9324 5.65338 11.2929 5.29289ZM5.29289 5.29289C5.68342 4.90237 6.31658 4.90237 6.70711 5.29289L12.7071 11.2929L12.7903 11.3871C13.0953 11.7794 13.0676 12.3466 12.7071 12.7071L6.70711 18.7071L6.6129 18.7903C6.22061 19.0953 5.65338 19.0676 5.29289 18.7071L5.2097 18.6129C4.90468 18.2206 4.93241 17.6534 5.29289 17.2929L9.87795 12.7072C10.2683 12.3165 10.2683 11.6835 9.87795 11.2928L5.29289 6.70711L5.2097 6.6129C4.90468 6.22061 4.93241 5.65338 5.29289 5.29289Z"
                                />
                              </svg>
                            </span>
                          </div>
                        </div>
                        <div
                          class="co6jds7"
                        >
                          <table>
                            <thead>
                              <tr>
                                <th>
                                  一
                                </th>
                                <th>
                                  二
                                </th>
                                <th>
                                  三
                                </th>
                                <th>
                                  四
                                </th>
                                <th>
                                  五
                                </th>
                                <th>
                                  六
                                </th>
                                <th>
                                  日
                                </th>
                              </tr>
                            </thead>
                            <tbody>
                              <tr
                                class="c-3svtm3"
                              >
                                <td
                                  class="co6jtjb cak7jp3"
                                >
                                  <div
                                    class="c6n0lki"
                                  >
                                    <span>
                                      26
                                    </span>
                                  </div>
                                </td>
                                <td
                                  class="co6jtjb cak7jp3"
                                >
                                  <div
                                    class="c6n0lki"
                                  >
                                    <span>
                                      27
                                    </span>
                                  </div>
                                </td>
                                <td
                                  class="co6jtjb cak7jp3"
                                >
                                  <div
                                    class="c6n0lki"
                                  >
                                    <span>
                                      28
                                    </span>
                                  </div>
                                </td>
                                <td
                                  class="co6jtjb cak7jp3"
                                >
                                  <div
                                    class="c6n0lki"
                                  >
                                    <span>
                                      29
                                    </span>
                                  </div>
                                </td>
                                <td
                                  class="co6jtjb"
                                >
                                  <div
                                    class="c6n0lki"
                                  >
                                    <span>
                                      1
                                    </span>
                                  </div>
                                </td>
                                <td
                                  class="co6jtjb"
                                >
                                  <div
                                    class="c6n0lki"
                                  >
                                    <span>
                                      2
                                    </span>
                                  </div>
                                </td>
                                <td
                                  class="co6jtjb"
                                >
                                  <div
                                    class="c6n0lki"
                                  >
                                    <span>
                                      3
                                    </span>
                                  </div>
                                </td>
                              </tr>
                              <tr
                                class="c-3svtm3"
                              >
                                <td
                                  class="co6jtjb"
                                >
                                  <div
                                    class="c6n0lki"
                                  >
                                    <span>
                                      4
                                    </span>
                                  </div>
                                </td>
                                <td
                                  class="co6jtjb cau3hh6"
                                >
                                  <div
                                    class="c6n0lki"
                                  >
                                    <span>
                                      5
                                    </span>
                                  </div>
                                </td>
                                <td
                                  class="co6jtjb"
                                >
                                  <div
                                    class="c6n0lki"
                                  >
                                    <span>
                                      6
                                    </span>
                                  </div>
                                </td>
                                <td
                                  class="co6jtjb"
                                >
                                  <div
                                    class="c6n0lki"
                                  >
                                    <span>
                                      7
                                    </span>
                                  </div>
                                </td>
                                <td
                                  class="co6jtjb"
                                >
                                  <div
                                    class="c6n0lki"
                                  >
                                    <span>
                                      8
                                    </span>
                                  </div>
                                </td>
                                <td
                                  class="co6jtjb"
                                >
                                  <div
                                    class="c6n0lki"
                                  >
                                    <span>
                                      9
                                    </span>
                                  </div>
                                </td>
                                <td
                                  class="co6jtjb"
                                >
                                  <div
                                    class="c6n0lki"
                                  >
                                    <span>
                                      10
                                    </span>
                                  </div>
                                </td>
                              </tr>
                              <tr
                                class="c-3svtm3"
                              >
                                <td
                                  class="co6jtjb"
                                >
                                  <div
                                    class="c6n0lki"
                                  >
                                    <span>
                                      11
                                    </span>
                                  </div>
                                </td>
                                <td
                                  class="co6jtjb"
                                >
                                  <div
                                    class="c6n0lki"
                                  >
                                    <span>
                                      12
                                    </span>
                                  </div>
                                </td>
                                <td
                                  class="co6jtjb"
                                >
                                  <div
                                    class="c6n0lki"
                                  >
                                    <span>
                                      13
                                    </span>
                                  </div>
                                </td>
                                <td
                                  class="co6jtjb"
                                >
                                  <div
                                    class="c6n0lki"
                                  >
                                    <span>
                                      14
                                    </span>
                                  </div>
                                </td>
                                <td
                                  class="co6jtjb"
                                >
                                  <div
                                    class="c6n0lki"
                                  >
                                    <span>
                                      15
                                    </span>
                                  </div>
                                </td>
                                <td
                                  class="co6jtjb"
                                >
                                  <div
                                    class="c6n0lki"
                                  >
                                    <span>
                                      16
                                    </span>
                                  </div>
                                </td>
                                <td
                                  class="co6jtjb"
                                >
                                  <div
                                    class="c6n0lki"
                                  >
                                    <span>
                                      17
                                    </span>
                                  </div>
                                </td>
                              </tr>
                              <tr
                                class="c-3svtm3"
                              >
                                <td
                                  class="co6jtjb"
                                >
                                  <div
                                    class="c6n0lki"
                                  >
                                    <span>
                                      18
                                    </span>
                                  </div>
                                </td>
                                <td
                                  class="co6jtjb"
                                >
                                  <div
                                    class="c6n0lki"
                                  >
                                    <span>
                                      19
                                    </span>
                                  </div>
                                </td>
                                <td
                                  class="co6jtjb"
                                >
                                  <div
                                    class="c6n0lki"
                                  >
                                    <span>
                                      20
                                    </span>
                                  </div>
                                </td>
                                <td
                                  class="co6jtjb"
                                >
                                  <div
                                    class="c6n0lki"
                                  >
                                    <span>
                                      21
                                    </span>
                                  </div>
                                </td>
                                <td
                                  class="co6jtjb"
                                >
                                  <div
                                    class="c6n0lki"
                                  >
                                    <span>
                                      22
                                    </span>
                                  </div>
                                </td>
                                <td
                                  class="co6jtjb"
                                >
                                  <div
                                    class="c6n0lki"
                                  >
                                    <span>
                                      23
                                    </span>
                                  </div>
                                </td>
                                <td
                                  class="co6jtjb"
                                >
                                  <div
                                    class="c6n0lki"
                                  >
                                    <span>
                                      24
                                    </span>
                                  </div>
                                </td>
                              </tr>
                              <tr
                                class="c-3svtm3"
                              >
                                <td
                                  class="co6jtjb"
                                >
                                  <div
                                    class="c6n0lki"
                                  >
                                    <span>
                                      25
                                    </span>
                                  </div>
                                </td>
                                <td
                                  class="co6jtjb"
                                >
                                  <div
                                    class="c6n0lki"
                                  >
                                    <span>
                                      26
                                    </span>
                                  </div>
                                </td>
                                <td
                                  class="co6jtjb"
                                >
                                  <div
                                    class="c6n0lki"
                                  >
                                    <span>
                                      27
                                    </span>
                                  </div>
                                </td>
                                <td
                                  class="co6jtjb"
                                >
                                  <div
                                    class="c6n0lki"
                                  >
                                    <span>
                                      28
                                    </span>
                                  </div>
                                </td>
                                <td
                                  class="co6jtjb"
                                >
                                  <div
                                    class="c6n0lki"
                                  >
                                    <span>
                                      29
                                    </span>
                                  </div>
                                </td>
                                <td
                                  class="co6jtjb"
                                >
                                  <div
                                    class="c6n0lki"
                                  >
                                    <span>
                                      30
                                    </span>
                                  </div>
                                </td>
                                <td
                                  class="co6jtjb"
                                >
                                  <div
                                    class="c6n0lki"
                                  >
                                    <span>
                                      31
                                    </span>
                                  </div>
                                </td>
                              </tr>
                              <tr
                                class="c-3svtm3"
                              >
                                <td
                                  class="co6jtjb cak7jp3"
                                >
                                  <div
                                    class="c6n0lki"
                                  >
                                    <span>
                                      1
                                    </span>
                                  </div>
                                </td>
                                <td
                                  class="co6jtjb cak7jp3"
                                >
                                  <div
                                    class="c6n0lki"
                                  >
                                    <span>
                                      2
                                    </span>
                                  </div>
                                </td>
                                <td
                                  class="co6jtjb cak7jp3"
                                >
                                  <div
                                    class="c6n0lki"
                                  >
                                    <span>
                                      3
                                    </span>
                                  </div>
                                </td>
                                <td
                                  class="co6jtjb cak7jp3"
                                >
                                  <div
                                    class="c6n0lki"
                                  >
                                    <span>
                                      4
                                    </span>
                                  </div>
                                </td>
                                <td
                                  class="co6jtjb cak7jp3"
                                >
                                  <div
                                    class="c6n0lki"
                                  >
                                    <span>
                                      5
                                    </span>
                                  </div>
                                </td>
                                <td
                                  class="co6jtjb cak7jp3"
                                >
                                  <div
                                    class="c6n0lki"
                                  >
                                    <span>
                                      6
                                    </span>
                                  </div>
                                </td>
                                <td
                                  class="co6jtjb cak7jp3"
                                >
                                  <div
                                    class="c6n0lki"
                                  >
                                    <span>
                                      7
                                    </span>
                                  </div>
                                </td>
                              </tr>
                            </tbody>
                          </table>
                        </div>
                        <div
                          class="cdbygxs"
                        >
                          <div
                            class="cspcuyk"
                          >
                            <button
                              class="c-qnii2s c-rg592x cvey2f3 cs6jo0l c-x3mwbq"
                              type="button"
                            >
                              <span
                                class="cboe6wq"
                              >
                                今天
                              </span>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="csrte0i"
              data-soui-status="default"
            >
              <div
                class="c-v46lkd"
              >
                Score
              </div>
              <div
                class="ci4ezng"
                data-soui-role="form-control"
              >
                <div
                  class="c-n90wlk"
                >
                  <div
                    class="c-p5cnid"
                  >
                    <div
                      class="cf87lce cxz6xvd"
                    >
                      <span
                        class="c1thigj"
                      >
                        <svg
                          fill="currentColor"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8.276 7.825L1.85649 8.7559L1.74278 8.77878C1.00761 8.96968 0.736859 9.90915 1.30093 10.4606L5.953 15.008L4.84231 21.3268L4.82911 21.4327C4.77288 22.2003 5.59415 22.7575 6.29763 22.3824L11.999 19.343L17.7023 22.3825L17.7988 22.4279C18.5105 22.7194 19.2948 22.1128 19.1578 21.3281L18.054 15.008L22.6997 10.46L22.7779 10.3745C23.2586 9.78723 22.9242 8.86973 22.1443 8.75601L15.758 7.825L12.895 2.05544C12.5264 1.31273 11.4661 1.31545 11.1013 2.06004L8.276 7.825Z"
                          />
                        </svg>
                      </span>
                      <span
                        class="c-4n6vph"
                      >
                        <svg
                          fill="currentColor"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8.276 7.825L1.85649 8.7559L1.74278 8.77878C1.00761 8.96968 0.736859 9.90915 1.30093 10.4606L5.953 15.008L4.84231 21.3268L4.82911 21.4327C4.77288 22.2003 5.59415 22.7575 6.29763 22.3824L11.999 19.343L17.7023 22.3825L17.7988 22.4279C18.5105 22.7194 19.2948 22.1128 19.1578 21.3281L18.054 15.008L22.6997 10.46L22.7779 10.3745C23.2586 9.78723 22.9242 8.86973 22.1443 8.75601L15.758 7.825L12.895 2.05544C12.5264 1.31273 11.4661 1.31545 11.1013 2.06004L8.276 7.825Z"
                          />
                        </svg>
                      </span>
                    </div>
                    <div
                      class="cf87lce cxz6xvd"
                    >
                      <span
                        class="c1thigj"
                      >
                        <svg
                          fill="currentColor"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8.276 7.825L1.85649 8.7559L1.74278 8.77878C1.00761 8.96968 0.736859 9.90915 1.30093 10.4606L5.953 15.008L4.84231 21.3268L4.82911 21.4327C4.77288 22.2003 5.59415 22.7575 6.29763 22.3824L11.999 19.343L17.7023 22.3825L17.7988 22.4279C18.5105 22.7194 19.2948 22.1128 19.1578 21.3281L18.054 15.008L22.6997 10.46L22.7779 10.3745C23.2586 9.78723 22.9242 8.86973 22.1443 8.75601L15.758 7.825L12.895 2.05544C12.5264 1.31273 11.4661 1.31545 11.1013 2.06004L8.276 7.825Z"
                          />
                        </svg>
                      </span>
                      <span
                        class="c-4n6vph"
                      >
                        <svg
                          fill="currentColor"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8.276 7.825L1.85649 8.7559L1.74278 8.77878C1.00761 8.96968 0.736859 9.90915 1.30093 10.4606L5.953 15.008L4.84231 21.3268L4.82911 21.4327C4.77288 22.2003 5.59415 22.7575 6.29763 22.3824L11.999 19.343L17.7023 22.3825L17.7988 22.4279C18.5105 22.7194 19.2948 22.1128 19.1578 21.3281L18.054 15.008L22.6997 10.46L22.7779 10.3745C23.2586 9.78723 22.9242 8.86973 22.1443 8.75601L15.758 7.825L12.895 2.05544C12.5264 1.31273 11.4661 1.31545 11.1013 2.06004L8.276 7.825Z"
                          />
                        </svg>
                      </span>
                    </div>
                    <div
                      class="cf87lce cxz6xvd"
                    >
                      <span
                        class="c1thigj"
                      >
                        <svg
                          fill="currentColor"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8.276 7.825L1.85649 8.7559L1.74278 8.77878C1.00761 8.96968 0.736859 9.90915 1.30093 10.4606L5.953 15.008L4.84231 21.3268L4.82911 21.4327C4.77288 22.2003 5.59415 22.7575 6.29763 22.3824L11.999 19.343L17.7023 22.3825L17.7988 22.4279C18.5105 22.7194 19.2948 22.1128 19.1578 21.3281L18.054 15.008L22.6997 10.46L22.7779 10.3745C23.2586 9.78723 22.9242 8.86973 22.1443 8.75601L15.758 7.825L12.895 2.05544C12.5264 1.31273 11.4661 1.31545 11.1013 2.06004L8.276 7.825Z"
                          />
                        </svg>
                      </span>
                      <span
                        class="c-4n6vph"
                      >
                        <svg
                          fill="currentColor"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8.276 7.825L1.85649 8.7559L1.74278 8.77878C1.00761 8.96968 0.736859 9.90915 1.30093 10.4606L5.953 15.008L4.84231 21.3268L4.82911 21.4327C4.77288 22.2003 5.59415 22.7575 6.29763 22.3824L11.999 19.343L17.7023 22.3825L17.7988 22.4279C18.5105 22.7194 19.2948 22.1128 19.1578 21.3281L18.054 15.008L22.6997 10.46L22.7779 10.3745C23.2586 9.78723 22.9242 8.86973 22.1443 8.75601L15.758 7.825L12.895 2.05544C12.5264 1.31273 11.4661 1.31545 11.1013 2.06004L8.276 7.825Z"
                          />
                        </svg>
                      </span>
                    </div>
                    <div
                      class="cf87lce"
                    >
                      <span
                        class="c1thigj"
                      >
                        <svg
                          fill="currentColor"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8.276 7.825L1.85649 8.7559L1.74278 8.77878C1.00761 8.96968 0.736859 9.90915 1.30093 10.4606L5.953 15.008L4.84231 21.3268L4.82911 21.4327C4.77288 22.2003 5.59415 22.7575 6.29763 22.3824L11.999 19.343L17.7023 22.3825L17.7988 22.4279C18.5105 22.7194 19.2948 22.1128 19.1578 21.3281L18.054 15.008L22.6997 10.46L22.7779 10.3745C23.2586 9.78723 22.9242 8.86973 22.1443 8.75601L15.758 7.825L12.895 2.05544C12.5264 1.31273 11.4661 1.31545 11.1013 2.06004L8.276 7.825Z"
                          />
                        </svg>
                      </span>
                      <span
                        class="c-4n6vph"
                      >
                        <svg
                          fill="currentColor"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8.276 7.825L1.85649 8.7559L1.74278 8.77878C1.00761 8.96968 0.736859 9.90915 1.30093 10.4606L5.953 15.008L4.84231 21.3268L4.82911 21.4327C4.77288 22.2003 5.59415 22.7575 6.29763 22.3824L11.999 19.343L17.7023 22.3825L17.7988 22.4279C18.5105 22.7194 19.2948 22.1128 19.1578 21.3281L18.054 15.008L22.6997 10.46L22.7779 10.3745C23.2586 9.78723 22.9242 8.86973 22.1443 8.75601L15.758 7.825L12.895 2.05544C12.5264 1.31273 11.4661 1.31545 11.1013 2.06004L8.276 7.825Z"
                          />
                        </svg>
                      </span>
                    </div>
                    <div
                      class="cf87lce"
                    >
                      <span
                        class="c1thigj"
                      >
                        <svg
                          fill="currentColor"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8.276 7.825L1.85649 8.7559L1.74278 8.77878C1.00761 8.96968 0.736859 9.90915 1.30093 10.4606L5.953 15.008L4.84231 21.3268L4.82911 21.4327C4.77288 22.2003 5.59415 22.7575 6.29763 22.3824L11.999 19.343L17.7023 22.3825L17.7988 22.4279C18.5105 22.7194 19.2948 22.1128 19.1578 21.3281L18.054 15.008L22.6997 10.46L22.7779 10.3745C23.2586 9.78723 22.9242 8.86973 22.1443 8.75601L15.758 7.825L12.895 2.05544C12.5264 1.31273 11.4661 1.31545 11.1013 2.06004L8.276 7.825Z"
                          />
                        </svg>
                      </span>
                      <span
                        class="c-4n6vph"
                      >
                        <svg
                          fill="currentColor"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8.276 7.825L1.85649 8.7559L1.74278 8.77878C1.00761 8.96968 0.736859 9.90915 1.30093 10.4606L5.953 15.008L4.84231 21.3268L4.82911 21.4327C4.77288 22.2003 5.59415 22.7575 6.29763 22.3824L11.999 19.343L17.7023 22.3825L17.7988 22.4279C18.5105 22.7194 19.2948 22.1128 19.1578 21.3281L18.054 15.008L22.6997 10.46L22.7779 10.3745C23.2586 9.78723 22.9242 8.86973 22.1443 8.75601L15.758 7.825L12.895 2.05544C12.5264 1.31273 11.4661 1.31545 11.1013 2.06004L8.276 7.825Z"
                          />
                        </svg>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="csrte0i"
              data-soui-status="default"
            >
              <div
                class="c-v46lkd"
              >
                upload avatar
              </div>
              <div
                class="ci4ezng"
                data-soui-role="form-control"
              >
                <div
                  class="c-dsitl c-4cljbw"
                >
                  <span
                    class="c-bnmddh"
                    style="width: 80px; height: 80px;"
                  >
                    <div
                      class="cxtwbfo"
                    >
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12.0317 4C12.5445 4.00067 12.9667 4.38727 13.0238 4.88468L13.0303 5.00131L13.022 11H19C19.5523 11 20 11.4477 20 12C20 12.5128 19.614 12.9355 19.1166 12.9933L19 13H13.02L13.012 19.0013C13.0113 19.5536 12.563 20.0007 12.0107 20C11.4979 19.9993 11.0757 19.6127 11.0186 19.1153L11.012 18.9987L11.02 13H5C4.44772 13 4 12.5523 4 12C4 11.4872 4.38604 11.0645 4.88338 11.0067L5 11H11.022L11.0304 4.99869C11.0311 4.44641 11.4794 3.99928 12.0317 4Z"
                        />
                      </svg>
                    </div>
                    <input
                      accept="image/*"
                      style="display: none;"
                      type="file"
                    />
                  </span>
                </div>
              </div>
            </div>
            <div
              class="csrte0i"
              data-soui-status="default"
            >
              <div
                class="c-v46lkd"
              >
                Address
              </div>
              <div
                class="ci4ezng"
                data-soui-role="form-control"
              >
                <div
                  class="c-i7z34y"
                  data-soui-type="input"
                >
                  <textarea
                    class="c-kulds8 c-km3xn9 cl630en"
                    rows="4"
                  />
                </div>
              </div>
            </div>
            <div
              class="csrte0i"
              data-soui-status="default"
              style="margin-top: 32px; margin-bottom: 0px;"
            >
              <div
                class="c-v46lkd"
              />
              <div
                class="ci4ezng"
                data-soui-role="form-control"
              >
                <button
                  class="c-trc8a3 cvey2f3"
                  type="submit"
                >
                  <span
                    class="cboe6wq"
                  >
                    Submit
                  </span>
                </button>
                <button
                  class="c-rg592x cvey2f3 cs6jo0l"
                  type="reset"
                >
                  <span
                    class="cboe6wq"
                  >
                    Reset
                  </span>
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
      <div
        class="cunqxu5"
      >
        <button
          class="c-trc8a3 cvey2f3"
          type="button"
        >
          <span
            class="cboe6wq"
          >
            OK
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer[Base] should render correctly about hide mask 1`] = `
<div
  class="c-6cljz3 c-rmoeu5 c-ehlr5u c-6gnw09 chaeb67 c-8u2kum c-1f0vjq"
>
  <div
    class="cf4334u"
  >
    <div
      class="c-snheni"
      style="width: 400px;"
    >
      <div
        class="cvg2z0f"
      >
        <div
          class="c-s33w2v"
        >
          Drawer Title
        </div>
        <div
          class="c-scekqv"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M4.6129 3.2097L4.70711 3.29289L12 10.585L19.2929 3.29289C19.6834 2.90237 20.3166 2.90237 20.7071 3.29289C21.0676 3.65338 21.0953 4.22061 20.7903 4.6129L20.7071 4.70711L13.415 12L20.7071 19.2929C21.0976 19.6834 21.0976 20.3166 20.7071 20.7071C20.3466 21.0676 19.7794 21.0953 19.3871 20.7903L19.2929 20.7071L12 13.415L4.70711 20.7071C4.31658 21.0976 3.68342 21.0976 3.29289 20.7071C2.93241 20.3466 2.90468 19.7794 3.2097 19.3871L3.29289 19.2929L10.585 12L3.29289 4.70711C2.90237 4.31658 2.90237 3.68342 3.29289 3.29289C3.65338 2.93241 4.22061 2.90468 4.6129 3.2097Z"
            />
          </svg>
        </div>
      </div>
      <div
        class="cf3wcb8"
      >
        you are visited 1
      </div>
      <div
        class="cunqxu5"
      >
        <button
          class="c-rg592x cvey2f3 cs6jo0l"
          type="button"
        >
          <span
            class="cboe6wq"
          >
            Cancel
          </span>
        </button>
        <button
          class="c-trc8a3 cvey2f3"
          type="button"
        >
          <span
            class="cboe6wq"
          >
            Ok
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer[Base] should render correctly about position 1`] = `
<div
  class="c-6cljz3 c-rmoeu5 c-ehlr5u c-6gnw09 c-8u2kum c-1f0vjq"
>
  <div
    class="cf4334u"
  >
    <div
      class="c-snheni"
      style="width: auto;"
    >
      <div
        class="cvg2z0f"
      >
        <div
          class="c-s33w2v"
        >
          Form
        </div>
        <div
          class="c-scekqv"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M4.6129 3.2097L4.70711 3.29289L12 10.585L19.2929 3.29289C19.6834 2.90237 20.3166 2.90237 20.7071 3.29289C21.0676 3.65338 21.0953 4.22061 20.7903 4.6129L20.7071 4.70711L13.415 12L20.7071 19.2929C21.0976 19.6834 21.0976 20.3166 20.7071 20.7071C20.3466 21.0676 19.7794 21.0953 19.3871 20.7903L19.2929 20.7071L12 13.415L4.70711 20.7071C4.31658 21.0976 3.68342 21.0976 3.29289 20.7071C2.93241 20.3466 2.90468 19.7794 3.2097 19.3871L3.29289 19.2929L10.585 12L3.29289 4.70711C2.90237 4.31658 2.90237 3.68342 3.29289 3.29289C3.65338 2.93241 4.22061 2.90468 4.6129 3.2097Z"
            />
          </svg>
        </div>
      </div>
      <div
        class="cf3wcb8"
      >
        <form
          class="cr9qis4"
          style="width: 500px;"
        >
          <div
            class="csrte0i c-48r573"
            data-soui-status="default"
          >
            <div
              class="c-v46lkd"
              style="width: 100px;"
            >
              Email
            </div>
            <div
              class="ci4ezng"
              data-soui-role="form-control"
            >
              <div
                class="c5g1ick"
                data-soui-type="input"
              >
                <div
                  class="cgc7yq7 c-dwl4jz cdip7we c-57d5o6"
                >
                  <input
                    class="cccsm1n"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="csrte0i c-48r573"
            data-soui-status="default"
          >
            <div
              class="c-v46lkd"
              style="width: 100px;"
            >
              Password
            </div>
            <div
              class="ci4ezng"
              data-soui-role="form-control"
            >
              <div
                class="c5g1ick"
                data-soui-type="input"
              >
                <div
                  class="cgc7yq7 c-dwl4jz cdip7we c-57d5o6"
                >
                  <input
                    class="cccsm1n"
                    type="password"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
      <div
        class="cunqxu5"
      >
        <div>
          <button
            class="c-rg592x cvey2f3 cs6jo0l"
            type="button"
          >
            <span
              class="cboe6wq"
            >
              Cancel
            </span>
          </button>
          <button
            class="c-trc8a3 cvey2f3"
            type="button"
          >
            <span
              class="cboe6wq"
            >
              Submit
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer[Base] should render correctly about resizable 1`] = `
<div
  class="c-6cljz3 c-rmoeu5 c-ehlr5u c-6gnw09 c-8u2kum c-1f0vjq"
>
  <div
    class="cf4334u"
  >
    <div
      class="c-snheni"
      style="width: auto;"
    >
      <div
        class="cvg2z0f"
      >
        <div
          class="c-s33w2v"
        >
          Form
        </div>
        <div
          class="c-scekqv"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M4.6129 3.2097L4.70711 3.29289L12 10.585L19.2929 3.29289C19.6834 2.90237 20.3166 2.90237 20.7071 3.29289C21.0676 3.65338 21.0953 4.22061 20.7903 4.6129L20.7071 4.70711L13.415 12L20.7071 19.2929C21.0976 19.6834 21.0976 20.3166 20.7071 20.7071C20.3466 21.0676 19.7794 21.0953 19.3871 20.7903L19.2929 20.7071L12 13.415L4.70711 20.7071C4.31658 21.0976 3.68342 21.0976 3.29289 20.7071C2.93241 20.3466 2.90468 19.7794 3.2097 19.3871L3.29289 19.2929L10.585 12L3.29289 4.70711C2.90237 4.31658 2.90237 3.68342 3.29289 3.29289C3.65338 2.93241 4.22061 2.90468 4.6129 3.2097Z"
            />
          </svg>
        </div>
      </div>
      <div
        class="cf3wcb8"
      >
        <form
          class="cr9qis4"
          style="width: 500px;"
        >
          <div
            class="csrte0i c-48r573"
            data-soui-status="default"
          >
            <div
              class="c-v46lkd"
              style="width: 100px;"
            >
              Email
            </div>
            <div
              class="ci4ezng"
              data-soui-role="form-control"
            >
              <div
                class="c5g1ick"
                data-soui-type="input"
              >
                <div
                  class="cgc7yq7 c-dwl4jz cdip7we c-57d5o6"
                >
                  <input
                    class="cccsm1n"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="csrte0i c-48r573"
            data-soui-status="default"
          >
            <div
              class="c-v46lkd"
              style="width: 100px;"
            >
              Password
            </div>
            <div
              class="ci4ezng"
              data-soui-role="form-control"
            >
              <div
                class="c5g1ick"
                data-soui-type="input"
              >
                <div
                  class="cgc7yq7 c-dwl4jz cdip7we c-57d5o6"
                >
                  <input
                    class="cccsm1n"
                    type="password"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
      <div
        class="cunqxu5"
      >
        <div>
          <button
            class="c-rg592x cvey2f3 cs6jo0l"
            type="button"
          >
            <span
              class="cboe6wq"
            >
              Cancel
            </span>
          </button>
          <button
            class="c-trc8a3 cvey2f3"
            type="button"
          >
            <span
              class="cboe6wq"
            >
              Submit
            </span>
          </button>
        </div>
      </div>
      <div
        class="c-el9z2m"
        data-position="right"
      />
    </div>
  </div>
</div>
`;

exports[`Drawer[Base] should render correctly about type 1`] = `
<div
  class="c-6cljz3 c-rmoeu5 c-ehlr5u c-6gnw09 c-8u2kum c-1f0vjq"
>
  <div
    class="cf4334u"
  >
    <div
      class="c-snheni"
      style="width: 500px;"
    >
      <div
        class="cvg2z0f"
      >
        <span
          class="cql19eg c-zfl55y c-fexgdh"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 23C5.92487 23 1 18.0751 1 12C1 5.92487 5.92487 1 12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23ZM6.34315 13.8284L8.46305 15.9483C9.24511 16.7304 10.5122 16.7304 11.2943 15.9483L17.6569 9.58579C18.0472 9.19546 18.0472 8.5619 17.6569 8.17157C17.2665 7.78125 16.633 7.78125 16.2426 8.17157L10.5872 13.827C10.1962 14.218 9.56119 14.218 9.17016 13.827L7.75736 12.4142C7.36704 12.0239 6.73347 12.0239 6.34315 12.4142C5.95282 12.8045 5.95282 13.4381 6.34315 13.8284Z"
            />
          </svg>
        </span>
        <div
          class="c-s33w2v"
        >
          Drawer Title with success Icon
        </div>
        <div
          class="c-scekqv"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M4.6129 3.2097L4.70711 3.29289L12 10.585L19.2929 3.29289C19.6834 2.90237 20.3166 2.90237 20.7071 3.29289C21.0676 3.65338 21.0953 4.22061 20.7903 4.6129L20.7071 4.70711L13.415 12L20.7071 19.2929C21.0976 19.6834 21.0976 20.3166 20.7071 20.7071C20.3466 21.0676 19.7794 21.0953 19.3871 20.7903L19.2929 20.7071L12 13.415L4.70711 20.7071C4.31658 21.0976 3.68342 21.0976 3.29289 20.7071C2.93241 20.3466 2.90468 19.7794 3.2097 19.3871L3.29289 19.2929L10.585 12L3.29289 4.70711C2.90237 4.31658 2.90237 3.68342 3.29289 3.29289C3.65338 2.93241 4.22061 2.90468 4.6129 3.2097Z"
            />
          </svg>
        </div>
      </div>
      <div
        class="cf3wcb8 c5d4xjn"
      >
        <span>
          Drawer type: 
        </span>
        <b>
          success
        </b>
      </div>
      <div
        class="cunqxu5"
      >
        <button
          class="c-rg592x cvey2f3 cs6jo0l"
          type="button"
        >
          <span
            class="cboe6wq"
          >
            Cancel
          </span>
        </button>
        <button
          class="c-trc8a3 cvey2f3"
          type="button"
        >
          <span
            class="cboe6wq"
          >
            Ok
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
